# huh

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  flake.nix  rustfmt.toml
src/: main.rs  opt.rs
