[package]
name = "huh"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
eyre = "0.6.6"
tempfile = "3.3.0"
which = "4.2.4"

[build-dependencies]
clap = { version = "3.0.14", features = ["derive"] }
clap_complete = "3.0.6"

[profile.release]
lto = "fat"
codegen-units = 1
